1、rag 模块中添加不同类型文件的解析器功能